update references and after intro
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/paper/manuscript.Rmd
+++ b/paper/manuscript.Rmd
@@ -68,7 +68,7 @@ Performing actions with exaggeration is straightforward for actions that are nor
 
 In naturalistic teaching settings, teachers have many possibilities for how to convey to a learner how to play a piece expressively. They may use verbal communication [@woody_2000, woody_2006] and non-verbal bodily cues [@simones_2015] as well as modulating the sounds that they are producing. In the present study, we focused entirely on the teaching of expressive techniques through sound in order to determine whether expert musicians would systematically exaggerate the actions necessary to implement a particular technique for musical expression. Pianists were asked to perform a piece to demonstrate to a learner how to implement the notated expressions (teaching condition) and to play the same piece for an audience (performing condition). Two basic expressive techniques in piano performance were used: articulation (legato and staccato) and dynamics (forte and piano). Articulation was assessed by key-overlap time between two consecutive notes. Positive key-overlap time indicates legato styles whereas negative key-overlap time indicates staccato styles. Dynamics was evaluated by key velocity of each key press. Higher key velocity means forte styles while lower key velocity means piano styles.
 
-If experts rely on generic action modulations, it can be expected that they will play more slowly during didactic demonstration, regardless of the kind of techniques to be taught. To the extent that experts use action modulations to support their teaching of specific techniques, they should exaggerate legato (i.e., key-overlap time should be more positive) and staccato (i.e., key-overlap time should be more negative) when teaching articulation whereas they should exaggerate forte (i.e., key velocity should be higher) and piano (i.e., key velocity should be lower) when teaching dynamics. Furthermore, one could speculate that they might produce modulations specifically at structurally important points that best highlight the technique to be taught. Importantly, they should avoid modulating irrelevant properties of expression, e.g., the smoothness of sound while teaching dynamics.
+If experts rely on generic action modulations, it can be expected that they will play more slowly during didactic demonstration, regardless of the kind of techniques to be taught. To the extent that experts use action modulations to support their teaching of specific techniques, they should exaggerate legato (i.e., key-overlap time should be more positive) and staccato (i.e., key-overlap time should be more negative) when teaching articulation whereas they should exaggerate forte (i.e., key velocity should be higher) and piano (i.e., key velocity should be lower) when teaching dynamics. Furthermore, one could speculate that they might produce modulations specifically at structurally important points that best highlight the technique to be taught. Importantly, they should avoid modulating irrelevant properties of expressio (e.g., the smoothness of sound while teaching dynamics).
 
 In Experiment 1, we employed a simple musical scale to examine whether and how skilled pianists vary their performance depending on which expressive techniques (i.e., either articulation or dynamics) they are teaching. Experiment 2 was conducted to replicate our findings from Experiment 1 with a more naturalistic piece of music.
 
@@ -94,7 +94,7 @@ One musical excerpt was used as a stimulus. The excerpt was taken from ``A Dozen
 
 First, participants were allocated to either the teaching or performing condition and asked to practise the excerpt with the notated expression of either articulation or dynamics (*Fig \ref{fig:stimuli} B-C*). As soon as they had produced the excerpt with the notated expression without pitch errors twice consecutively, the test trials began.
 
-In the teaching condition, participants were instructed to play the excerpt of music as if they were teaching it to students. It was mentioned that the students already knew the sequence of the tones and that they were trying to learn how to perform the piece with the notated expression by listening to the participant's performance. In the performing condition, participants were asked to play the excerpt of music as if they were performing it to an audience (see details in *[Supplementary material](#supplementary)*). Participants played the piece 8 times per expressive technique per condition, so there were 32 trials in total (2 conditions x 2 expressive techniques x 8 trials). The order of the conditions was blocked and counterbalanced across participants. The order of the expressive techniques within each condition was also blocked and counterbalanced across participants. A leading metronome (80 quarter beats per minute, 8 beats) indicated the target tempo before each trial.
+In the teaching condition, participants were instructed to play the excerpt of music as if they were teaching it to students. It was mentioned that the students already knew the sequence of the tones and that they were trying to learn how to perform the piece with the notated expression by listening to the participant's performance. In the performing condition, participants were asked to play the excerpt of music as if they were performing it to an audience (see details in *[Supplementary material](#supplementary)*). Participants played the piece 8 times per technique per condition, so there were 32 trials in total (2 conditions x 2 techniques x 8 trials). The order of the conditions was blocked and counterbalanced across participants. The order of the techniques within each condition was also blocked and counterbalanced across participants. A leading metronome (80 quarter beats per minute, 8 beats) indicated the target tempo before each trial.
 
 At the end of the experiment, participants filled in a questionnaire asking about their demographic information and experience in piano performance/teaching.
 
@@ -102,9 +102,9 @@ At the end of the experiment, participants filled in a questionnaire asking abou
 
 Three dependent variables were computed for data analysis. Inter-onset intervals (IOIs) are the intervals between onsets of adjacent notes and provide a measure of tempo. Key-overlap time (KOT) is the difference between the offset time of the current tone (i.e., key release time) and the onset time of the ensuing tone and is a measure for the smoothness of musical sequences [@bresin_2000]. A positive value indicates smooth legato styles due to overlap between the current and ensuing tone whereas a negative value indicates sharp staccato styles due to separation between the current and ensuing tone. Tone intensity is assessed by key velocity (KV) and measures the loudness of a musical note. A higher value indicates forte styles whereas a lower value indicates piano styles. The value of KV in MIDI varies between 0 (minimum) and 127 (maximum).
 
-Data cleaning, preprocessing and statistical analysis were performed in R version 4.0.5. For statistical analysis, only 16th notes with expressive notations were included. Overall, five trials were excluded from data analysis because participants did not follow the sheet music or stopped performing before the end. Pitch errors were identified by comparing the sequence of musical notes produced by a participant with the sequence of musical notes according to the sheet music. Pitch errors included either extra, missing or substituted tones and were manually removed by using the *editData* R package. For onsets, `r round(sum(error_onset_summary$N)/((31*4*8)-5)*100, 2)`% of the trials contained at least one pitch error (extra notes: `r round(error_onset_summary[Reason == "Extra Notes"]$N/((31*4*8)-5)*100, 2)`%, missing notes: `r round(error_onset_summary[Reason == "Missing Notes"]$N/((31*4*8)-5)*100, 2)`%, substituted notes: `r round(error_onset_summary[Reason == "Substituted"]$N/((31*4*8)-5)*100, 2)`%). For offsets, `r round(sum(error_offset_summary$N)/((31*4*8)-5)*100, 2)`% of the trials contained at least one pitch error (extra notes: `r round(error_offset_summary[Reason == "Extra Notes"]$N/((31*4*8)-5)*100, 2)`%, missing notes: `r round(error_offset_summary[Reason == "Missing Notes"]$N/((31*4*8)-5)*100, 2)`%, substituted notes: `r round(error_offset_summary[Reason == "Substituted"]$N/((31*4*8)-5)*100, 2)`%). We found that some participants did not follow sheet music (e.g., hold some notes longer than notated), therefore the order of offsets did not correspond to that of onsets. We counted these as errors and removed the erroneous notes even if the order of onsets was correct. As a result, less than 1 % of total responses were corrected. In addition to pitch errors, we removed outliers for IOIs, KOT and KV, defined as values more than 3 standard deviations from the mean of each dependent variable. For each dependent variable, this resulted in less than 5% of overall responses being removed as outliers. 
+Data cleaning, preprocessing and statistical analysis were performed in R version 4.0.5. For statistical analysis, only 16th notes with expressive notations were included. Overall, five trials were excluded from data analysis because participants did not follow the sheet music or stopped performing before the end. Pitch errors were identified by comparing the sequence of musical notes produced by a participant with the sequence of musical notes according to the sheet music. Pitch errors included either extra, missing or substituted tones and were manually removed by using the *editData* R package. For onsets, `r round(sum(error_onset_summary$N)/((31*4*8)-5)*100, 2)`% of the trials contained at least one pitch error (extra notes: `r round(error_onset_summary[Reason == "Extra Notes"]$N/((31*4*8)-5)*100, 2)`%, missing notes: `r round(error_onset_summary[Reason == "Missing Notes"]$N/((31*4*8)-5)*100, 2)`%, substituted notes: `r round(error_onset_summary[Reason == "Substituted"]$N/((31*4*8)-5)*100, 2)`%). For offsets, `r round(sum(error_offset_summary$N)/((31*4*8)-5)*100, 2)`% of the trials contained at least one pitch error (extra notes: `r round(error_offset_summary[Reason == "Extra Notes"]$N/((31*4*8)-5)*100, 2)`%, missing notes: `r round(error_offset_summary[Reason == "Missing Notes"]$N/((31*4*8)-5)*100, 2)`%, substituted notes: `r round(error_offset_summary[Reason == "Substituted"]$N/((31*4*8)-5)*100, 2)`%). We found that some participants did not precisely follow the sheet music (e.g., they held some notes longer than notated), therefore the order of offsets did not correspond to that of onsets. We counted these as errors and removed the erroneous notes even if the order of onsets was correct. As a result, less than 1 % of total responses were corrected. In addition to pitch errors, we removed outliers for IOIs, KOT and KV, defined as values more than 3 standard deviations from the mean of each dependent variable. For each dependent variable, this resulted in less than 5% of overall responses being removed as outliers. 
 
-We performed separate analyses for the two expressive techniques (i.e., articulation and dynamics). A paired-sample *t*-test or a Wilcoxon Signed-rank test (a non-parametric alternative to a paired *t*-test) was performed to compare the mean IOIs in the teaching and performing condition. For KOT and KV, we performed a 2 x 2 repeated-measures analysis of variance (ANOVA) with the factors Condition (teaching vs. performing) and Subcomponent (Articulation: legato vs. staccato or Dynamics: forte vs. piano, respectively). The *t.test* or *wilcox.test* function in the *stats* R package was used for a *t*-test or a Wilcoxon Signed-rank test. For calculating an effect size, we used the *rstatix* R package. The *aov_car* function in the *afex* R package was used for a repeated-measures ANOVA. For post-hoc comparisons on the estimated marginal means, we used the *emmeans* R package. 
+We performed separate analyses for the two techniques (i.e., articulation and dynamics). A paired-sample *t*-test or a Wilcoxon Signed-rank test (a non-parametric alternative to a paired *t*-test) was performed to compare the mean IOIs in the teaching and performing condition. For KOT and KV, we performed a 2 x 2 repeated-measures analysis of variance (ANOVA) with the factors Condition (teaching vs. performing) and Subcomponent (Articulation: legato vs. staccato or Dynamics: forte vs. piano, respectively). The *t.test* or *wilcox.test* function in the *stats* R package was used for a *t*-test or a Wilcoxon Signed-rank test. For calculating an effect size, we used the *rstatix* R package. The *aov_car* function in the *afex* R package was used for a repeated-measures ANOVA. For post-hoc comparisons on the estimated marginal means, we used the *emmeans* R package. 
 
 ```{r stim-1, out.width = "100%", fig.cap = "\\label{fig:stimuli}(A)Original sheet music. (B)Articulation. The curved line (slur) indicates legato and the dots indicate staccato. (C)Dynamics. The symbol `f' denotes forte and the symbol `p' denotes piano. For data analysis, only the 16th notes were included.", echo = FALSE}
 stim_a <- image_border(image_read(here("paper/sheetmusic/1", "stim_a.png")), "#FFFFFF", "140x140")
@@ -133,7 +133,7 @@ source(here("experiment-1/analysis/stats", "articulation.R"), chdir = TRUE)
 source(here("experiment-1/analysis/stats", "dynamics.R"), chdir = TRUE)
 ```
 
-All effects are reported as significant at *p* < .05. We first report results for performance of the piece with the notated expression of articulation (*Fig \ref{fig:stimuli} B*), followed by performance of the piece with the notated expression of dynamics (*Fig \ref{fig:stimuli} C*). To recall our predictions, if participants play more slowly when they are trying to teach, inter-onset intervals (IOIs) should be larger when teaching. If participants specifically modulate relevant aspects of the expressive techniques they are trying to teach, key-overlap time (KOT) should be more positive for legato and more negative for staccato when teaching articulation, and key velocity (KV) should be higher for forte and lower for piano when teaching dynamics.
+All effects are reported as significant at *p* < .05. We first report results for performance of the piece with the notated expression of articulation (*Fig \ref{fig:stimuli} B*), followed by performance of the piece with the notated expression of dynamics (*Fig \ref{fig:stimuli} C*). To recall our predictions, if participants play more slowly when they are trying to teach, inter-onset intervals (IOIs) should be larger when teaching. If participants specifically modulate relevant aspects of the techniques they are trying to teach, key-overlap time (KOT) should be more positive for legato and more negative for staccato when teaching articulation, and key velocity (KV) should be higher for forte and lower for piano when teaching dynamics.
 
 ## Articulation
 ### Inter-onset Intervals (IOIs)
@@ -251,7 +251,7 @@ img_kot_dyn_1 <- image_read(here("paper/image", "kot_dyn_1.png"), density = 300)
 
 The findings from Experiment 1 indicated that skilled pianists modified their performance for teaching purposes. For IOIs, we found a small but significant slowing down during teaching specifically when playing the piece with the notated articulation. This finding is in line with earlier studies that found slower performance of actions in a teaching context [e.g., @brand_2002; @mcellin_2017]. However, we did not find a significant difference in tempo when participants were teaching dynamics. It could be that trying to keep the prescribed tempo (conveyed through the leading metronome) limited the extent to which participants slowed down their performance during teaching. Another possibility is that slower performance may be beneficial to highlight the relation between two notes (i.e., to what extent two notes overlap) and was therefore employed when teaching articulation, whereas slower performance might not help when teaching dynamics. 
 
-The results for KOT and KV showed that participants successfully highlighted relevant aspects of articulation and dynamics. Specifically, participants exaggerated staccato when teaching articulation and forte when teaching dynamics. Moreover, our exploratory analysis demonstrated that participants made a larger contrast in dynamics at transition points (i.e., forte to piano or piano to forte). Importantly, participants did not modulate their performance in terms of irrelevant aspects of the techniques for teaching purposes (e.g., modulating the smoothness of sound while teaching dynamics). These findings confirmed that participants modulated their performance in systematic and fine-grained ways to teach expressive techniques.
+The results for KOT and KV showed that participants successfully highlighted relevant aspects of articulation and dynamics. Specifically, participants exaggerated staccato when teaching articulation and forte when teaching dynamics. Moreover, our exploratory analysis demonstrated that participants made a larger contrast in dynamics at transition points (i.e., forte to piano or piano to forte). Importantly, participants did not modulate their performance in terms of irrelevant aspects of the techniques for teaching purposes (e.g., modulating the smoothness of sound while teaching dynamics). These findings confirmed that participants modulated their performance in systematic and fine-grained ways to teach particular techniques.
 
 ```{r plot-ioi-1, out.width = "100%", fig.cap = "\\label{fig:ioi-1}Experiment 1: IOIs (ms) when playing the piece with either articulation (left) or dynamics (right). A dashed line represents the tempo given by a metronome. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \\textit{p} < .05, ** \\textit{p} < .01, *** \\textit{p} < .001"}
 # combine
@@ -295,15 +295,15 @@ We recruited 21 piano experts who already had a degree (above bachelor or equiva
 
 ### Apparatus and stimuli
 
-The same apparatus as in Experiment 1 was used. We selected Clementi's Sonatina Op.36 (No.3) in C major as a stimulus because it contained our targeted expressions (i.e., articulation and dynamics) and was relatively simple in terms of motor skills. The first 12 measures of the original piece were used and modified so that the piece had an almost equal number of data points for each dependent variable. The modified piece consisted of a 12-measure isochronous melody notated in 4/4 meter to be played with the right hand only. Original sheet music was used for the purpose of practice (*Fig \ref{fig:stimuli-2} A*). Expressive notations were added to the original sheet music for the experiment (*Fig \ref{fig:stimuli-2} B-C*). These excerpts were confirmed to be musically natural by a doctoral student in piano performance at Liszt Ferenc Academy of Music in Hungary. The fingering was also assigned and confirmed by the same doctoral student.
+The same apparatus as in Experiment 1 was used. We selected Clementi's Sonatina Op.36 (No.3) in C major as a stimulus because it contains our targeted expressions (i.e., articulation and dynamics) and is relatively simple in terms of motor skills. The first 12 measures of the original piece were used and modified so that the piece had an almost equal number of data points for each dependent variable. The modified piece consisted of a 12-measure isochronous melody notated in 4/4 meter to be played with the right hand only. Original sheet music was used for the purpose of practice (*Fig \ref{fig:stimuli-2} A*). Expressive notations were added to the original sheet music for the experiment (*Fig \ref{fig:stimuli-2} B-C*). These excerpts were confirmed to be musically natural by a doctoral student in piano performance at Liszt Ferenc Academy of Music in Hungary. The fingering was also assigned and confirmed by the same doctoral student.
 
 ### Procedure{#procedure-2}
 
-We employed the same procedure as in Experiment 1 with several modifications. First, all participants were required to memorise the piece without expressive notations (i.e., *Fig \ref{fig:stimuli-2} A*) prior to the experiment so that they had enough time to familiarise themselves with the piece and perform it without pitch errors while performing it with different notated expressions in the lab. Second, we modified the wording of instructions for the performing condition so that both instructions had the same focus on expressive notations because there was less emphasis on expression in the instruction in the performing condition in Experiment 1 (see details in *[Supplementary material](#supplementary)*). Third, participants could choose their preferred tempo from one of three options (100, 110 and 120 quarter beats per minute) because some evidence show that musicians have their own preferred tempo, which affects their temporal variability [@zamm_2018]. The chosen tempo was again cued by a leading metronome.  To make sure that participants memorised the piece and had sufficient motor skills, we asked participants to perform the piece without looking at the original sheet music (*Fig \ref{fig:stimuli-2} A*). Those who could not perform the piece without pitch errors twice consecutively within five attempts were excluded from data analysis (as a result, one participant was excluded). The rest of the procedure was identical to Experiment 1.
+We employed the same procedure as in Experiment 1 with several modifications. First, all participants were required to memorise the piece without expressive notations (i.e., *Fig \ref{fig:stimuli-2} A*) prior to the experiment so that they had enough time to familiarise themselves with the piece and perform it without pitch errors while performing it with different notated expressions in the lab. Second, we modified the wording of instructions for the performing condition so that both instructions had the same focus on expressive notations because there had been less emphasis on expression in the instruction in the performing condition in Experiment 1 (see details in *[Supplementary material](#supplementary)*). Third, participants could choose their preferred tempo from one of three options (100, 110 and 120 quarter beats per minute) because some evidence show that musicians have their own preferred tempo, which affects their temporal variability [@zamm_2018]. The chosen tempo was again cued by a leading metronome.  To make sure that participants memorised the piece and had sufficient motor skills, we asked participants to perform the piece without looking at the original sheet music (*Fig \ref{fig:stimuli-2} A*). Those who could not perform the piece without pitch errors twice consecutively within five attempts were excluded from data analysis (as a result, one participant was excluded). The rest of the procedure was identical to Experiment 1.
 
 ### Data analysis
 
-Data cleaning, preprocessing and statistical analysis were almost identical to Experiment 1. For statistical analysis, only 8th notes with expressive notations were included. As a result, only one 8th note in the 4th measure without any expression was not included. IOIs were normalised by their preferred tempo because each participant chose a tempo from the three options. Given the different tempi, key-overlap ratios (KORs) were calculated by dividing KOT by the mean IOI of each performance to normalise KOT. Additionally, we include KV difference (i.e., KV difference for each interval) at transition points (i.e., forte to piano or piano to forte) as a dependent variable based on the findings of Experiment 1. Three trials were entirely excluded from data analysis because participants did not follow the sheet music. Using the same approach as in Experiment 1, pitch errors were removed manually. For onsets, `r round(sum(error_onset_summary_2$N)/((20*4*8)-3)*100, 2)`% of the trials contained at least one pitch error (extra notes: `r round(error_onset_summary_2[Reason == "Extra Notes"]$N/((20*4*8)-3)*100, 2)`%, missing notes: `r round(error_onset_summary_2[Reason == "Missing Notes"]$N/((20*4*8)-3)*100, 2)`%, substituted notes: `r round(error_onset_summary_2[Reason == "Substituted"]$N/((20*4*8)-3)*100, 2)`%). For offsets, `r round(sum(error_offset_summary_2$N)/((20*4*8)-3)*100, 2)`% of the trials contained at least one pitch error (extra notes: `r round(error_offset_summary_2[Reason == "Extra Notes"]$N/((20*4*8)-3)*100, 2)`%, missing notes: `r round(error_offset_summary_2[Reason == "Missing Notes"]$N/((20*4*8)-3)*100, 2)`%, substituted notes: `r round(error_offset_summary_2[Reason == "Substituted"]$N/((20*4*8)-3)*100, 2)`%). As a result, less than 1 % of total responses were corrected. For each dependent variable, removing outliers (i.e., responses outside 3 standard deviations from the mean) resulted in less than 5% of overall responses being removed.
+Data cleaning, preprocessing and statistical analysis were almost identical to Experiment 1. For statistical analysis, only 8th notes with expressive notations were included. As a result, only one 8th note in the 4th measure without any expression was not included. IOIs were normalised by their preferred tempo because each participant chose a tempo from the three options. Given the different tempi, key-overlap ratios (KORs) were calculated by dividing KOT by the mean IOI of each performance to normalise KOT. Additionally, we included KV difference (i.e., KV difference for each interval) at transition points (i.e., forte to piano or piano to forte) as a dependent variable based on the findings of Experiment 1. Three trials were entirely excluded from data analysis because participants did not follow the sheet music closely enough. Using the same approach as in Experiment 1, pitch errors were removed manually. For onsets, `r round(sum(error_onset_summary_2$N)/((20*4*8)-3)*100, 2)`% of the trials contained at least one pitch error (extra notes: `r round(error_onset_summary_2[Reason == "Extra Notes"]$N/((20*4*8)-3)*100, 2)`%, missing notes: `r round(error_onset_summary_2[Reason == "Missing Notes"]$N/((20*4*8)-3)*100, 2)`%, substituted notes: `r round(error_onset_summary_2[Reason == "Substituted"]$N/((20*4*8)-3)*100, 2)`%). For offsets, `r round(sum(error_offset_summary_2$N)/((20*4*8)-3)*100, 2)`% of the trials contained at least one pitch error (extra notes: `r round(error_offset_summary_2[Reason == "Extra Notes"]$N/((20*4*8)-3)*100, 2)`%, missing notes: `r round(error_offset_summary_2[Reason == "Missing Notes"]$N/((20*4*8)-3)*100, 2)`%, substituted notes: `r round(error_offset_summary_2[Reason == "Substituted"]$N/((20*4*8)-3)*100, 2)`%). As a result, less than 1 % of total responses were corrected. For each dependent variable, removing outliers (i.e., responses outside 3 standard deviations from the mean) resulted in less than 5% of overall responses being removed.
 
 ```{r stim-2, out.width = "100%", fig.cap = "\\label{fig:stimuli-2}(A)Original sheet music. (B)Articulation. The curved line (slur) indicates legato and the dots indicate staccato. (C)Dynamics. The symbol `f' denotes forte and the symbol `p' denotes piano. For data analysis, only the 8th notes were included.", echo = FALSE}
 stim_a_2 <- image_border(image_read(here("paper/sheetmusic/2", "stim_a.png")), "#FFFFFF", "120x120")
@@ -444,7 +444,7 @@ img_kor_dyn_2 <- image_read(here("paper/image", "kor_dyn_2.png"), density = 300)
 
 ## Discussion
 
-The results from Experiment 2 replicate our earlier findings and provide further evidence that skilled pianists were able to modulate their performance for teaching purposes. As in Experiment 1, we observed slower performance only while teaching the notated articulation. Again, KORs showed that when teaching articulation, participants exaggerated staccato while there was no significant difference in legato between the two conditions. While teaching dynamics, KV showed that participants exaggerated forte and piano. This pattern of exaggeration was more pronounced than in Experiment 1, where only higher KV for forte was observed. Furthermore, we again found that when teaching dynamics, at transition points participants produced a larger contrast in dynamics between forte and piano, bidirectionally. Importantly, participants did not modulate performance aspects that were irrelevant for the techniques to be taught (i.e., no modulation of dynamics when teaching articulation and vice versa). Overall, Experiment 2 demonstrated systematic and fine-grained didactic performance modulations for a naturalistic piece of music.
+The results from Experiment 2 replicate our earlier findings and provide further evidence that skilled pianists modulated their performance in specific ways for teaching purposes. As in Experiment 1, we observed slower performance only while teaching the notated articulation. Again, KORs showed that when teaching articulation, participants exaggerated staccato while there was no significant difference in legato between the two conditions. While teaching dynamics, KV showed that participants exaggerated forte and piano. This pattern of exaggeration was more pronounced than in Experiment 1, where only higher KV for forte was observed. Furthermore, we again found that when teaching dynamics, at transition points participants produced a larger contrast in dynamics between forte and piano, bidirectionally. Importantly, participants did not modulate performance aspects that were irrelevant for the techniques to be taught (i.e., no modulation of dynamics when teaching articulation and vice versa). Overall, Experiment 2 demonstrated systematic and fine-grained didactic performance modulations for a naturalistic piece of music.
 
 ```{r plot-ioi-2, out.width = "100%", fig.cap = "\\label{fig:ioi-2}Experiment 2: Normalised IOIs when playing the piece with either articulation (left) or dynamics (right). A dashed line represents the tempo given by a metronome. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \\textit{p} < .05, ** \\textit{p} < .01, *** \\textit{p} < .001"}
 # combine
@@ -482,15 +482,17 @@ img_vel_diff
 
 # General Discussion
 
-The aim of the study was to investigate how expert pianists modulate their performance to teach expressive techniques. Overall, the findings of the two experiments showed that pianists performed one and the same piece differently depending on whether they played with the intention to teach expressive techniques or with the intention to perform the piece for an audience. When playing with the intention to teach, pianists selectively highlighted relevant aspects of artistic expressions. Across two different pieces, participants exaggerated staccato when playing with the intention to teach expressions concerning articulation. The lack of a difference for legato when teaching articulation might stem from a ceiling effect. When playing with the intention to teach expressions concerning dynamics, participants made larger dynamics changes between forte and piano (in both directions). This constitutes an effective way to highlight the technique as loudness is determined relatively. Taken together, our findings demonstrate that expert pianists systematically modulated their sound depending on the specific technique they were trying to convey.
+The aim of this study was to investigate how expert pianists modulate their performance to teach expressive techniques. Overall, the findings of the two experiments showed that pianists performed one and the same piece differently depending on whether they played with the intention to teach expressive techniques or with the intention to perform the piece for an audience. When playing with the intention to teach, pianists selectively highlighted relevant aspects of artistic expressions. Across two different pieces, participants exaggerated staccato when playing with the intention to teach expressions concerning articulation. The lack of a difference for legato when teaching articulation might stem from a ceiling effect because there might not be enough room for exaggeration without significantly dropping the tempo. When playing with the intention to teach expressions concerning dynamics, participants made larger dynamics changes between forte and piano (in both directions). This constitutes an effective way to highlight the technique as loudness is determined relatively. Taken together, our findings demonstrate that expert pianists systematically modulated their sound depending on the specific technique they were trying to convey.
 
-Although participants tended to play slower in the teaching condition than in the performing condition in general, we found a significant difference only for articulation, not for dynamics. As mentioned in the discussion of Experiment 1, it could be that the metronome beats given prior to each performance discouraged participants from deviating from the prescribed tempo. Another possibility is that expression is best taught when leaving the tempo unchanged when it is irrelevant. This would imply that general didactic modulations like slowing down might be less useful in the context of teaching expressive techniques where timing itself can be used to add an expression to a performance.
+Although participants tended to play slower in the teaching condition than in the performing condition in general, we found a significant difference only for articulation, not for dynamics. As mentioned in the discussion of Experiment 1, it could be that the metronome beats given prior to each performance discouraged participants from deviating from the prescribed tempo. Another possibility is that expression is best taught when leaving the tempo unchanged when it is irrelevant. This would imply that general didactic modulations like slowing down might be less useful in the context of teaching techniques where timing itself can be used to add an expression to a performance.
 
-Musicians and music teachers tend to consider expressive skills as a performer’s most important skill [@lindstrom_2003]. In the present study, experts focused on the teaching of expressions that were notated. However, expression also has other facets [@juslin_2003] that are not only piece-related but performer- or context-related. An interesting topic for future research is how experts teach not only expressive techniques as such but convey possibilities of interpretation.
+One limitation of the study is that although we instructed participants to imagine a situation in which they were teaching musical expression to students, there was no feedback from actual students. It can be expected that teachers would also make didactic modulations in some domains other than acoustic properties, such as gestures if they are physically present in front of students. Moreover, given that teachers modulate their demonstration throughout ongoing interactions with learners [@okazaki_2019], future studies are needed to investigate how experts dynamically adapt their performance to their students’ skill level and demonstrated abilities. Also, some of the participants in the current study did not have teaching experience at all and even those who had teaching experience had taught for only a few years. It would be important to investigate if our findings would be observed in participants with extensive experience teaching the piano.
 
-One limitation of the study is that although we instructed participants to imagine a situation in which they were teaching musical expression to students, there was no feedback from actual students. Given that teachers modulate their demonstration throughout online interactions with learners [@okazaki_2019], future studies are needed to investigate how experts dynamically adapt their performance to their students' skill level and demonstrated abilities.
+Another limitation of the study is that it is not certain how the results might generalise to performances of more complex pieces and pieces with fewer notations. In more complex pieces of music, multiple expressive notations could be assigned to one note or phrase. Also, it is rare that almost all the notes are assigned to one expressive notation as in our stimuli. Future studies are needed to determine whether pianists would exaggerate specific parts of a piece or prioritise one aspect over the others given multiple concurrent expressive notations and more possibilities for giving the music different interpretations.
 
-The present findings extend earlier research on teaching-related action modulations. First, our study sheds light on the teaching of expressive techniques that are an integral part of skill acquisition in artistic domains. We showed that compared to an expressive performance baseline, experts made specific modulations to teach particular techniques. Second, the specificity of the observed modulations supports the idea that teaching comprises more than generic modulations like slowing down or overall exaggeration that may draw learners' attention. Rather, expert demonstrators seem to follow principles of relevance in communication [@sperber_1995], highlighting only those aspects they are intending to demonstrate. How learners benefit from the perceptual and motor cues that come with specific exaggerations, and whether understanding the teacher's intentions explicitly adds to the learning success are important questions for future research.   
+Musicians and music teachers tend to consider expressive skills as performers’ most important skills [@lindstrom_2003]. In the present study, experts focused on the teaching of expressions that were notated. However, expression also has other facets [@juslin_2003] that are not only piece-related (e.g., notated expressions) but performer- or context-related (e.g., performer’s interpretation, listening contexts such as recordings or concerts). The ultimate goal of expressive performance is considered to lie in developing performers’ own interpretations of music and convey affects and emotions by using expressive tools such as articulation, dynamics, tempo and timing [@meissner_2021]. The current research opens up the possibility of studying the teaching of expressive performance by demonstrating that pianists could signal didactic intentions without relying on verbal instructions, which are heavily used in actually teaching settings [e.g., @woody_2000]. It would be interesting to examine how teachers play (i.e., demonstrate) relates to verbal instructions they give.
+
+The present findings extend earlier research on teaching-related action modulations. First, our study sheds light on the teaching of technical skills that are an integral part of skill acquisition in artistic domains. We showed that compared to an expressive performance baseline, experts made specific modulations to teach particular techniques. Second, the specificity of the observed modulations supports the idea that teaching comprises more than generic modulations like slowing down or overall exaggeration that may draw learners’ attention. Rather, expert demonstrators seem to follow principles of relevance in communication [@sperber_1995], highlighting only those aspects they are intending to demonstrate. How learners benefit from the perceptual and motor cues that come with specific exaggerations, and whether understanding the teacher's intentions explicitly adds to the learning success are important questions for future research.   
 
 # References
 
